[package]
name = "randoku"
version = "0.1.0"
authors = ["Christian Stefanescu <christian.stefanescu@lawpilots.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features=["std", "std_rng"]}
lazy_static = "1.4"
rocket = { version = "0.5.0-rc.3" }

[dependencies.rocket_dyn_templates]
features = ["handlebars"]